# monocular_person_following

./: CMakeLists.txt  install.sh  package.xml
launch/: jetson_person_following.launch  jetson_person_following_sim.launch  monocular_person_following.launch  start_robot.launch
scripts/: face_detector_node.py  robot_controller.py  simple_gesture_recognition.py  visualization.py
scripts/eval/: convert_dataset2bag.py  generate_bb.py
src/: monocular_person_following_node.cpp
src/monocular_person_following/: context.cpp
