<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>monocular_person_following</name>
  <version>0.0.0</version>
  <description>The monocular_person_following package</description>

  <maintainer email="koide@dei.unipd.it">koide</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>message_generation</depend>
  <depend>cv_bridge</depend>
  <depend>tf</depend>
  <depend>image_transport</depend>
  <depend>message_filters</depend>
  <depend>eigen_conversions</depend>
  <depend>usb_cam</depend>
  <depend>image_view</depend>
  <depend>rosbag</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ccf_person_identification</depend>
  <depend>monocular_people_tracking</depend>
  <depend>lightweight_human_pose_estimation</depend>

  <export>
  </export>
</package>
